# Selfish

./: README.md  Selfish_doc.md  TODO_FRONTEND_GUIDE.md
ai_services/: .gitignore  gemini.py  llm_service.py  main.py  pyproject.toml  rag.py
client/: .gitignore  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/components/: MiniCalender.tsx  ProtectedRoute.tsx  TodoWidget.tsx
client/src/context/: AuthContext.tsx
client/src/hooks/: useAuth.ts
client/src/pages/: Calender.tsx  ChatPage.tsx  Dashboard.tsx  Login.tsx  ProjectPage.tsx  Register.tsx  TodoPage.tsx
client/src/services/: aiChat.ts  api.ts
server/: .gitignore  package-lock.json  package.json  server.js
server/config/: db.js  supabase.js
server/controllers/: aiController.js  authController.js  calenderController.js  projectController.js  slideController.js  todoController.js
server/middleware/: auth.js
server/migrations/: add_screenshot_columns.sql  create_storage_bucket.sql
server/models/: CalenderToken.js  CanvasSlide.js  Project.js  User.js
server/routes/: aiRoutes.js  auth.js  calender.js  projectRoutes.js  slideRoutes.js  todoRoutes.js
server/utils/: generateToken.js
